--- a/rdaslides.dtx
+++ b/rdaslides.dtx
@@ -804,7 +804,7 @@ To show nothing at all:
 You can insert a closing slide in your presentation to parallel your opening slide.
 
 \begin{docCommand}{finale}{\oarg{important note}}
-The optional argument lets you add an important note, such as a key link or date, to the end of the slide. There is not much room in the original RDA theme, so be sparing fi that's the one you use.
+The optional argument lets you add an important note, such as a key link or date, to the end of the slide. There is not much room in the original RDA theme, so be sparing if that's the one you use.
 
 Wrap it in a bare frame, as you would for \cs{maketitle}:
 \begin{tcolorbox}
